image to image request for second grid for better consistency